# BookRAG

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  evaluate.py  flask_rag.py  main.py  pyproject.toml  requirements.txt  tg_bot.py
books_library/: Куприн_Александр_Яма.html
chroma_db/74ca503e-2ae5-423e-b89f-6e10443c0338/: index_metadata.pickle
data/: questions.json
src/: chroma.py  flibusta.py  llm.py  royallib.py
static/: style.css
templates/: index.html
